--- a/Task5-Helm-charts/app-service.yaml
+++ b/Task5-Helm-charts/app-service.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   type: LoadBalancer
   selector:
-    app: testapp
+     app: my-app
   ports:
     - protocol: TCP
       port: 80
